# SpectrumIDEV3

./: .gitignore  dependencies.txt  requirement.txt
Resources/: Spectrum.qrc
Source/FoldersTree/: AlifFolders.cpp  AlifFolders.h  SPFolders.cpp  SPFolders.h
Source/Functions/: SPFileIO.cpp  SPFileIO.h
Source/Lexer/: AlifComplete.cpp  AlifComplete.h  AlifLexer.cpp  AlifLexer.h
Source/MenuBar/: AlifMenu.cpp  AlifMenu.h  SPMenu.cpp  SPMenu.h
Source/Terminal/: AlifTerminal.cpp  AlifTerminal.h  SPTerminal.cpp  SPTerminal.h
Source/TextEditor/: AlifComplete.cpp  AlifComplete.h  AlifEditor.cpp  AlifEditor.h  AlifLexer.cpp  AlifLexer.h  SPEditor.cpp  SPEditor.h  SPHighlighter.cpp  SPHighlighter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
Spectrum/: AlifParser.cpp  AlifParser.h  CMakeLists.txt  Spectrum.aps  Spectrum.cpp  Spectrum.h  Spectrum.pro  Spectrum.qrc  Spectrum.rc  Spectrum.sln  Spectrum.ui  Spectrum.vcxproj  Spectrum.vcxproj.filters  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp  resource.h  resources.qrc
Spectrum Package/Linux/config/: config.xml
Spectrum Package/MacOS/SpectrumInstaller.app/Contents/: Info.plist
Spectrum Package/SpectrumPackaging/config/: config.xml
SpectrumIDEV3/: SpectrumIDEV3.cpp  SpectrumIDEV3.h  SpectrumIDEV3.qrc  SpectrumIDEV3.sln  SpectrumIDEV3.ui  SpectrumIDEV3.vcxproj  SpectrumIDEV3.vcxproj.filters  main.cpp
